# merkle-tree-nix-store-thing

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md
benches/: store.rs
src/: backend.rs  build.rs  closure.rs  copy.rs  id.rs  install.rs  lib.rs  local.rs  main.rs  object.rs  reference.rs  remote.rs  store.rs  util.rs
src/backend/: fs.rs
src/local/: fs.rs  install.rs
src/object/: buffer.rs  id.rs  name.rs  pack.rs  platform.rs  reference.rs  spooled.rs
src/remote/: chunker.rs
src/store/: fs.rs  mem.rs
