[package]
name = "foo"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
blake3 = { version = "0.3.6", features = ["rayon"] }
cached = { version = "0.22.0", default-features = false }
filetime = "0.2.12"
fnv = "1.0"
futures = "0.3.7"
hex = { version = "0.4.2", features = ["serde"] }
goblin = "0.3.0"
infer = "0.3.2"
memmap = "0.7.0"
nom = { version = "6.0.1", default-features = false, features = ["alloc"] }
once_cell = "1.5"
pathdiff = "0.2.0"
semver = { version = "0.11.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.58"
smol_str = { version = "0.1.17", features = ["serde"] }
tempfile = "3.1.0"
tokio = "0.3.3"
